--- a/q/232946.html
+++ b/q/232946.html
@@ -26,23 +26,37 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>043</td><td>Clojure</td><td>240917T203406Z</td><td><a href="https://codegolf.stackexchange.com/questions/232946/unfold-a-list-using-a-function/275598#275598">Martin P</a></td></tr>
-<tr d-ix="1"><td>036</td><td>PowerShell Core</td><td>210803T023912Z</td><td><a href="https://codegolf.stackexchange.com/questions/232946/unfold-a-list-using-a-function/233022#233022">Julian</a></td></tr>
-<tr d-ix="2"><td>042</td><td>R</td><td>210801T153748Z</td><td><a href="https://codegolf.stackexchange.com/questions/232946/unfold-a-list-using-a-function/233004#233004">Dominic </a></td></tr>
-<tr d-ix="3"><td>022</td><td>Haskell</td><td>210801T014142Z</td><td><a href="https://codegolf.stackexchange.com/questions/232946/unfold-a-list-using-a-function/232999#232999">Unrelate</a></td></tr>
-<tr d-ix="4"><td>046</td><td>tinylisp</td><td>210801T012736Z</td><td><a href="https://codegolf.stackexchange.com/questions/232946/unfold-a-list-using-a-function/232998#232998">DLosc</a></td></tr>
-<tr d-ix="5"><td>057</td><td>Racket</td><td>210731T231852Z</td><td><a href="https://codegolf.stackexchange.com/questions/232946/unfold-a-list-using-a-function/232996#232996">D. Ben K</a></td></tr>
-<tr d-ix="6"><td>007</td><td>Jelly</td><td>210730T223631Z</td><td><a href="https://codegolf.stackexchange.com/questions/232946/unfold-a-list-using-a-function/232972#232972">Nick Ken</a></td></tr>
-<tr d-ix="7"><td>042</td><td>Python 3.8 prerelease</td><td>210730T013754Z</td><td><a href="https://codegolf.stackexchange.com/questions/232946/unfold-a-list-using-a-function/232949#232949">hyper-ne</a></td></tr>
-<tr d-ix="8"><td>045</td><td>Perl 5</td><td>210730T111721Z</td><td><a href="https://codegolf.stackexchange.com/questions/232946/unfold-a-list-using-a-function/232960#232960">Kjetil S</a></td></tr>
-<tr d-ix="9"><td>029</td><td>APL Dyalog Unicode</td><td>210730T012508Z</td><td><a href="https://codegolf.stackexchange.com/questions/232946/unfold-a-list-using-a-function/232947#232947">Ad&#225;</a></td></tr>
-<tr d-ix="10"><td>022</td><td>K ngn/k</td><td>210730T060501Z</td><td><a href="https://codegolf.stackexchange.com/questions/232946/unfold-a-list-using-a-function/232954#232954">Razetime</a></td></tr>
-<tr d-ix="11"><td>027</td><td>J</td><td>210730T051357Z</td><td><a href="https://codegolf.stackexchange.com/questions/232946/unfold-a-list-using-a-function/232953#232953">Jonah</a></td></tr>
-<tr d-ix="12"><td>037</td><td>JavaScript</td><td>210730T014237Z</td><td><a href="https://codegolf.stackexchange.com/questions/232946/unfold-a-list-using-a-function/232950#232950">tsh</a></td></tr>
-<tr d-ix="13"><td>026</td><td>Wolfram Language Mathematica</td><td>210730T023433Z</td><td><a href="https://codegolf.stackexchange.com/questions/232946/unfold-a-list-using-a-function/232952#232952">att</a></td></tr>
-<tr d-ix="14"><td>036</td><td>Factor</td><td>210730T012953Z</td><td><a href="https://codegolf.stackexchange.com/questions/232946/unfold-a-list-using-a-function/232948#232948">Bubbler</a></td></tr>
+<tr d-ix="0"><td>016</td><td>Uiua</td><td>240919T000025Z</td><td><a href="https://codegolf.stackexchange.com/questions/232946/unfold-a-list-using-a-function/275626#275626">nyxbird</a></td></tr>
+<tr d-ix="1"><td>043</td><td>Clojure</td><td>240917T203406Z</td><td><a href="https://codegolf.stackexchange.com/questions/232946/unfold-a-list-using-a-function/275598#275598">Martin P</a></td></tr>
+<tr d-ix="2"><td>036</td><td>PowerShell Core</td><td>210803T023912Z</td><td><a href="https://codegolf.stackexchange.com/questions/232946/unfold-a-list-using-a-function/233022#233022">Julian</a></td></tr>
+<tr d-ix="3"><td>042</td><td>R</td><td>210801T153748Z</td><td><a href="https://codegolf.stackexchange.com/questions/232946/unfold-a-list-using-a-function/233004#233004">Dominic </a></td></tr>
+<tr d-ix="4"><td>022</td><td>Haskell</td><td>210801T014142Z</td><td><a href="https://codegolf.stackexchange.com/questions/232946/unfold-a-list-using-a-function/232999#232999">Unrelate</a></td></tr>
+<tr d-ix="5"><td>046</td><td>tinylisp</td><td>210801T012736Z</td><td><a href="https://codegolf.stackexchange.com/questions/232946/unfold-a-list-using-a-function/232998#232998">DLosc</a></td></tr>
+<tr d-ix="6"><td>057</td><td>Racket</td><td>210731T231852Z</td><td><a href="https://codegolf.stackexchange.com/questions/232946/unfold-a-list-using-a-function/232996#232996">D. Ben K</a></td></tr>
+<tr d-ix="7"><td>007</td><td>Jelly</td><td>210730T223631Z</td><td><a href="https://codegolf.stackexchange.com/questions/232946/unfold-a-list-using-a-function/232972#232972">Nick Ken</a></td></tr>
+<tr d-ix="8"><td>042</td><td>Python 3.8 prerelease</td><td>210730T013754Z</td><td><a href="https://codegolf.stackexchange.com/questions/232946/unfold-a-list-using-a-function/232949#232949">hyper-ne</a></td></tr>
+<tr d-ix="9"><td>045</td><td>Perl 5</td><td>210730T111721Z</td><td><a href="https://codegolf.stackexchange.com/questions/232946/unfold-a-list-using-a-function/232960#232960">Kjetil S</a></td></tr>
+<tr d-ix="10"><td>029</td><td>APL Dyalog Unicode</td><td>210730T012508Z</td><td><a href="https://codegolf.stackexchange.com/questions/232946/unfold-a-list-using-a-function/232947#232947">Ad&#225;</a></td></tr>
+<tr d-ix="11"><td>022</td><td>K ngn/k</td><td>210730T060501Z</td><td><a href="https://codegolf.stackexchange.com/questions/232946/unfold-a-list-using-a-function/232954#232954">Razetime</a></td></tr>
+<tr d-ix="12"><td>027</td><td>J</td><td>210730T051357Z</td><td><a href="https://codegolf.stackexchange.com/questions/232946/unfold-a-list-using-a-function/232953#232953">Jonah</a></td></tr>
+<tr d-ix="13"><td>037</td><td>JavaScript</td><td>210730T014237Z</td><td><a href="https://codegolf.stackexchange.com/questions/232946/unfold-a-list-using-a-function/232950#232950">tsh</a></td></tr>
+<tr d-ix="14"><td>026</td><td>Wolfram Language Mathematica</td><td>210730T023433Z</td><td><a href="https://codegolf.stackexchange.com/questions/232946/unfold-a-list-using-a-function/232952#232952">att</a></td></tr>
+<tr d-ix="15"><td>036</td><td>Factor</td><td>210730T012953Z</td><td><a href="https://codegolf.stackexchange.com/questions/232946/unfold-a-list-using-a-function/232948#232948">Bubbler</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h2>Clojure, 43 bytes</h2>
+<div id="pu0" class="pu"><h1><a href="https://uiua.org" rel="nofollow noreferrer">Uiua</a>, 16 bytes</h1>
+<pre><code>◌⍢(^!°⊂⊂|±⧻):[]¤
+</code></pre>
+<p><a href="https://www.uiua.org/pad?src=0_13_0-dev_2__dSEg4oaQIOKXjOKNoiheIcKw4oqC4oqCfMKx4qe7KTpbXcKkCmYg4oaQIOKorCjiip_ijIriioPDt-KXvzUpW109MC4KCnUhZjEzNwo=" rel="nofollow noreferrer">Try it!</a></p>
+<pre><code>◌⍢(^!°⊂⊂|±⧻):[]¤
+              :[]¤  # s -&gt; [s] []
+ ⍢(      |±⧻)      # repeat while the top isn't []:
+      °⊂⊂          #   [s r?] [r1 r2...] -&gt; s [r? r1 r2...]
+    ^!              #   s [...] -&gt; f(s) [...]
+◌                   # [] [...] -&gt; [...]
+</code></pre>
+<p>I initially tried to do something with catching an error from <code>°⊟</code>, but this ended up being shorter.</p>
+</div>
+<div id="pu1" class="pu"><h2>Clojure, 43 bytes</h2>
 <pre><code>#(seq(iteration %2 :initk % :vf :v :kf :s))
 </code></pre>
 <p>Call with <code>state</code> and <code>function</code>. Function has to return either <code>nil</code> or hash-map with keys <code>:s</code> (new state) and <code>:v</code> (value).
@@ -57,7 +71,7 @@ Example:</p>
 =&gt; (2 2 0 1)
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/PowerShell/PowerShell" rel="nofollow noreferrer">PowerShell Core</a>, 36 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/PowerShell/PowerShell" rel="nofollow noreferrer">PowerShell Core</a>, 36 bytes</h1>
 
 <pre class="lang-powershell prettyprint-override"><code>for($k,$a=$args;$a){$a,$u=&amp;$k $a;$u}
 </code></pre>
@@ -65,7 +79,7 @@ Example:</p>
 <p>Takes two parameters, a function <code>$k</code> and the initial value <code>$a</code></p>
 <p>-1 byte thanks to <em>mazzy</em>!</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.r-project.org/" rel="nofollow noreferrer">R</a>, <s>43</s> 42 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://www.r-project.org/" rel="nofollow noreferrer">R</a>, <s>43</s> 42 bytes</h1>
 
 <pre class="lang-r prettyprint-override"><code>u=function(s,l=f(s))if(1/l)c(l[2],u(l[1]))
 </code></pre>
@@ -73,7 +87,7 @@ Example:</p>
 <p>Recursive function using helper function <code>f</code> to to the unfolding.</p>
 <p><code>f</code> must output the fixed non-integer value <code>Inf</code> to represent that the list has ended (a more natural value in <a href="https://www.r-project.org/" rel="nofollow noreferrer">R</a> would be <code>NULL</code> or <code>NA</code>, but the functions <code>is.null()</code> and <code>is.na()</code> are each much less golfy than the simple test <code>1/x</code> [truthy for all integers, falsy only for <code>Inf</code>])</p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, 22 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, 22 bytes</h1>
 
 <pre class="lang-hs prettyprint-override"><code>f#x=do(s,v)&lt;-f x;v:f#s
 </code></pre>
@@ -94,7 +108,7 @@ Example:</p>
 <p><a href="https://tio.run/##XY3RCoJAEEXf9ysu2INSghERSPYBgf2A@bDVri2Ziau2gd/eNmtE1LzMXOaee89cX0RZWt8LEMfwOcINMp4Hbn@ElZ4ZdNyvQwmT9NOp9PQw30RJltvui6X8cRB0z8CDH551kEjgOgoGmvtZNAIFzKg@M2Db6Ra@nqEPsA4JMoRlTud/zltLEXelhTPkjB24Fku6O0ywN65XjXSCCGStsCNCVQVESczYM8FJ9entRLYlY1euKuLrRlXu9c6bL1b2eZQlL7QNj3X9Ag" rel="nofollow noreferrer" title="Haskell – Try It Online">Try it online!</a></p>
 <p>Function is expected to return a list <code>[state, value]</code> or an empty list.</p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/dloscutoff/Esolangs/tree/master/tinylisp" rel="nofollow noreferrer">tinylisp</a>, 46 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/dloscutoff/Esolangs/tree/master/tinylisp" rel="nofollow noreferrer">tinylisp</a>, 46 bytes</h1>
 <pre><code>(d U(q((S F)(i(F S)(c(h(t(F S)))(U(h(F S))F))(
 </code></pre>
 <p><a href="https://tio.run/##LYwxCsMwEAR7v2LLvSKEEEx@oNKN0QPkyCYHsp1Yavx6@RDpZgZ2i25n0vytlRGeP3KEEyodRuGbH5aGIvQmDZ1JZdpDRNLpCMcpHeO8YAp5vvVgCusUAzgIqAsGK5oLeDfsra17bCTYNNl1R4/H8/XfS70A" rel="nofollow noreferrer" title="tinylisp – Try It Online">Try it online!</a></p>
@@ -124,7 +138,7 @@ Example:</p>
     (_unfold func (func val) nil)))
 </code></pre>
 </div>
-<div id="pu5" class="pu"><h1 id="racket-lang-racket-57-bytes-vtqr"><a href="https://racket-lang.org/" rel="nofollow noreferrer">Racket</a>, <code>#lang racket</code>, 57 bytes</h1>
+<div id="pu6" class="pu"><h1 id="racket-lang-racket-57-bytes-vtqr"><a href="https://racket-lang.org/" rel="nofollow noreferrer">Racket</a>, <code>#lang racket</code>, 57 bytes</h1>
 
 <pre class="lang-scheme prettyprint-override"><code>(define(u s f)(match(f s)[`(,z,x)(cons x(u z f))][_'()]))
 </code></pre>
@@ -134,13 +148,13 @@ Example:</p>
 <p>Not the most interesting racket solution: no tail-call recursion, so is bounded by memory usage. It would be more fun (and not difficult) to write a <code>#lang</code> that supplies <code>unfold</code> as part of its runtime—then there would be a 0-byte solution :)</p>
 <p>We (unexpectedly?) save a few bytes by eliminating spaces between <code>,z,x</code> and <code>_'()</code> in <code>match</code> clauses. I expected each to coalesce into a single identifier, but (un)quoting took precedence. The remaining whitespace (6 spaces, by my count) is required.</p>
 </div>
-<div id="pu6" class="pu"><h1 id="jelly-7-bytes-vynn"><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 7 bytes</h1>
+<div id="pu7" class="pu"><h1 id="jelly-7-bytes-vynn"><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 7 bytes</h1>
 <pre><code>Ṫv@¥ƬFḊ
 </code></pre>
 <p><a href="https://tio.run/##AS4A0f9qZWxsef//4bmqdkDCpcasRuG4iv///zE1OTc4/yJk4oG1VSTigJzigJ3CuT8i" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
 <p>A dyadic link taking the start value as its left argument and the Jelly code for the relevant function to unfold as its right. It expects the return value of this link to be an empty list if we’re done, otherwise a list of <code>[next value for result, next value for function]</code>. Returns a list of integers.</p>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 42 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 42 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>u=lambda f,x:(r:=f(x))and[r[1],*u(f,r[0])]
 </code></pre>
@@ -149,13 +163,13 @@ Example:</p>
 -4 bytes thanks to Shaggy</p>
 <p>Assumes falsy output for the end case and a pair otherwise (any subscriptable value with at least two elements). Since a list of falsy values is still truthy, this works perfectly fine.</p>
 </div>
-<div id="pu8" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a>, 45 bytes</h1>
+<div id="pu9" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a>, 45 bytes</h1>
 
 <pre class="lang-perl prettyprint-override"><code>sub u{@f=$_[1]-&gt;(@_);@f?(pop@f,u(@f,pop)):()}
 </code></pre>
 <p><a href="https://tio.run/##HY1RCoJAFEX/W8VFLN/YZJQNRWK6jwwhcMiocRibIMLfFtAS24iN8uDcA/fC05W5ib5v7Rn2ncvUL4@r0@JAecmSXGakG51LbsnBKWN7Yt24lgJv3F/wlb2n7aWWj2R0ZKBaPWjwpWB8yKlg2IMYuok2roTnl/h9vvAQ4drUioKAw1TPyrQVLMEvOYqZe8HcRfAK5UE2Bqt4yx12Dut4IzjiUIThDnOIpP8D" rel="nofollow noreferrer" title="Perl 5 – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu9" class="pu"><h1><a href="https://www.dyalog.com/" rel="nofollow noreferrer">APL (Dyalog Unicode)</a>, <s>32</s> 29 bytes</h1>
+<div id="pu10" class="pu"><h1><a href="https://www.dyalog.com/" rel="nofollow noreferrer">APL (Dyalog Unicode)</a>, <s>32</s> 29 bytes</h1>
 
 <p>Full program, prompting for <code>s</code> and then for <code>f</code>.</p>
 <pre class="lang-apl prettyprint-override"><code>¯1↓r⊣⎕{1↓r,∘⊃←⍺⍺⍵}⍣{⍬≡⍺}⎕⊣r←⍬
@@ -170,7 +184,7 @@ Example:</p>
 <p><code>r⊣</code> discard that (i.e. the last computed value, i.e. <code>[]</code>) in favour of <code>r</code></p>
 <p><code>¯1↓</code> drop the last value (<code>0</code>)</p>
 </div>
-<div id="pu10" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="noreferrer">K (ngn/k)</a>, 22 bytes</h1>
+<div id="pu11" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="noreferrer">K (ngn/k)</a>, 22 bytes</h1>
 <pre><code>{-1_1_*'|'{x}(y@*:)\x}
 </code></pre>
 <p><a href="https://ngn.bitbucket.io/k#eJxLs6rWNYw3jNdSr1GvrqjVqHTQstKMqajl4kqLNjQ2t65Wia6wNbA2sNaIr1A11dQxVayIrY0FAK++D28=" rel="noreferrer">Try it online!</a></p>
@@ -188,7 +202,7 @@ Example:</p>
  -1_1_                 remove first and last element
 </code></pre>
 </div>
-<div id="pu11" class="pu"><h1><a href="http://jsoftware.com/" rel="nofollow noreferrer">J</a>, 27 bytes</h1>
+<div id="pu12" class="pu"><h1><a href="http://jsoftware.com/" rel="nofollow noreferrer">J</a>, 27 bytes</h1>
 <pre><code>1 :'[:(#~2|i.@#)(,u@{:)^:_'
 </code></pre>
 <p><a href="https://tio.run/##y/qvpKeepmBrpaCuoKNgoGAFxLp6Cs5BPm7/DRWs1KOtNJTrjGoy9RyUNTV0Sh2qrTTjrOLV/2typSZn5CtomKrVaOgo1xnYaGva6DmoqplqKqQpGBqb/wcA" rel="nofollow noreferrer" title="J – Try It Online">Try it online!</a></p>
@@ -198,14 +212,14 @@ Example:</p>
 <li><code>[:(#~2|i.@#)</code> Keep only odd indexed elements, ie, the elements only, and discard the states and the starting value.</li>
 </ul>
 </div>
-<div id="pu12" class="pu"><h1>JavaScript, 37 bytes</h1>
+<div id="pu13" class="pu"><h1>JavaScript, 37 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>f=&gt;g=s=&gt;(a=f(s))?[a[1],...g(a[0])]:[]
 </code></pre>
 <p><a href="https://tio.run/##JcvBCsIwDADQv5EEZrG6XQbJPqTkELa1KCURu/n79eC7v5d@ta2f5/u4mm97Py173ahn4kKNGJQyNMQlaYoyhBAKaLoJypykr27N6x6qF/hPMGJbkjGPg13iJLOdtSLE@2OcEPsP" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <p><code>((state: T) =&gt; [next_state: T, val: S]?) =&gt; (state: T) =&gt; S[]</code></p>
 </div>
-<div id="pu13" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 26 bytes</h1>
+<div id="pu14" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 26 bytes</h1>
 <pre><code>f=#@#2/.{a_,b_}:&gt;b&lt;&gt;#~f~a&amp;
 </code></pre>
 <p><a href="https://tio.run/##y00syUjNTSzJTE78n2YLRMoOykb6etWJ8TpJ8bVWdkk2dsp1aXWJav8DijLzSqKVde3SHByUY9XqgpMT8@qquao906KVbW0NdKprdQJL80syU/NKgoAmZualpBZFK@uYxsaq6SgYGpvXctX@BwA" rel="nofollow noreferrer" title="Wolfram Language (Mathematica) – Try It Online">Try it online!</a></p>
@@ -215,10 +229,10 @@ Example:</p>
 </code></pre>
 <p><a href="https://tio.run/##y00syUjNTSzJTE78n2YLRMoOykb6etWJ8TpJ8bVWdtVJOsrKag4OynVpdYm1av8DijLzSqKVde3SgGKxanXByYl5ddVc1Z5p0cq2tgY61bU6gaX5JZmpeSVBQHMz81JSi6KVdUxjY9V0FAyNzWu5av8DAA" rel="nofollow noreferrer" title="Wolfram Language (Mathematica) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu14" class="pu"><h1><a href="https://factorcode.org/" rel="nofollow noreferrer">Factor</a>, <sup><s>37</s></sup> 36 bytes</h1>
+<div id="pu15" class="pu"><h1><a href="https://factorcode.org/" rel="noreferrer">Factor</a>, <sup><s>37</s></sup> 36 bytes</h1>
 <pre><code>[ collector [ follow ] dip 1 head* ]
 </code></pre>
-<p><a href="https://tio.run/##FYwxCgIxEEV7T/FrQWUREfQAYmMjVssWIZmwwdlMnI2IXj7O8or/isePzlfR9rhfb5cTnqSZGJOrI2Z6vSl7mlGUav0WTbnivOr2R/RGNAbbA3aTBNMUNz9SwdB6eGGm5XkJzeVjQUgFHUZyYW2Rd8zYwjM5bX8" rel="nofollow noreferrer" title="Factor – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##FYwxCgIxEEV7T/FrQWUREfQAYmMjVssWIZmwwdlMnI2IXj7O8or/isePzlfR9rhfb5cTnqSZGJOrI2Z6vSl7mlGUav0WTbnivOr2R/RGNAbbA3aTBNMUNz9SwdB6eGGm5XkJzeVjQUgFHUZyYW2Rd8zYwjM5bX8" rel="noreferrer" title="Factor – Try It Online">Try it online!</a></p>
 <p><em>-1 byte thanks to @chunes</em></p>
 <p>Takes <code>initial-value</code> and <code>quotation</code> on the stack, and returns a vector. The input quotation should return <code>next-state next-value</code> on the stack, or <code>f f</code> to terminate.</p>
 <p><code>some-quot collector [ high-order-func ] dip</code> is a pattern to snatch the top of the stack of every call of <code>some-quot</code> into a vector. Unfortunately, it collects the top of the stack before <code>follow</code> can detect that the loop has ended, so the resulting vector has a dummy element at the end. <code>1 head*</code> removes it.</p>
