--- a/q/69.html
+++ b/q/69.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>038</td><td>JavaScript Node.js</td><td>230929T025614Z</td><td><a href="https://codegolf.stackexchange.com/questions/69/golf-you-a-quine-for-great-good/265588#265588">noodle p</a></td></tr>
-<tr d-ix="1"><td>161</td><td>Javascript Operators 161 Bytes</td><td>240828T151214Z</td><td><a href="https://codegolf.stackexchange.com/questions/69/golf-you-a-quine-for-great-good/275206#275206">ThePlane</a></td></tr>
+<tr d-ix="0"><td>161</td><td>Javascript Operators 161 Bytes</td><td>240828T151214Z</td><td><a href="https://codegolf.stackexchange.com/questions/69/golf-you-a-quine-for-great-good/275206#275206">ThePlane</a></td></tr>
+<tr d-ix="1"><td>038</td><td>JavaScript Node.js</td><td>230929T025614Z</td><td><a href="https://codegolf.stackexchange.com/questions/69/golf-you-a-quine-for-great-good/265588#265588">noodle p</a></td></tr>
 <tr d-ix="2"><td>032</td><td>Jellyfish</td><td>221202T121233Z</td><td><a href="https://codegolf.stackexchange.com/questions/69/golf-you-a-quine-for-great-good/255115#255115">angel_p_</a></td></tr>
 <tr d-ix="3"><td>003</td><td>RProgN 2</td><td>170922T032818Z</td><td><a href="https://codegolf.stackexchange.com/questions/69/golf-you-a-quine-for-great-good/143471#143471">ATaco</a></td></tr>
 <tr d-ix="4"><td>074</td><td>Befalse</td><td>240620T070302Z</td><td><a href="https://codegolf.stackexchange.com/questions/69/golf-you-a-quine-for-great-good/273713#273713">Bubbler</a></td></tr>
@@ -382,18 +382,7 @@
 <tr d-ix="353"><td>054</td><td>JavaScript</td><td>160907T011614Z</td><td><a href="https://codegolf.stackexchange.com/questions/69/golf-you-a-quine-for-great-good/92449#92449">ETHprodu</a></td></tr>
 <tr d-ix="354"><td>nan</td><td></td><td>110128T011512Z</td><td><a href="https://codegolf.stackexchange.com/questions/69/golf-you-a-quine-for-great-good/80#80">Nakilon</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 38 bytes</h1>
-<pre class="lang-javascript prettyprint-override"><code>console.log(s='console.log(s=%o,s)',s)
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=m70kLz8ldcGCpaUlaboWN9WS8_OK83NS9XLy0zWKbdVRuar5OsWa6kAMUQ3VBNMMAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
-<p>This seems to be the shortest JavaScript quine that doesn't abuse function stringification. Unfortunately seems to be platform-specific: it works as-is in both Chrome and Node.js, but in Safari the single quotes must be replaced with double quotes.</p>
-<p>This uses the <a href="https://developer.mozilla.org/en-US/docs/Web/API/console#o" rel="nofollow noreferrer"><code>%o</code> formatting directive</a> of <code>console.log</code> to insert a JSON-stringified object, which in this case wraps the string in single quotes.</p>
-<p>In a strict-mode setting like Deno, you need to declare <code>var s;</code> at the start:</p>
-<pre class="lang-javascript prettyprint-override"><code>var s;console.log(s=&quot;var s;console.log(s=%o,s)&quot;,s)
-</code></pre>
-<p>Bun doesn't seem to support the <code>%o</code> directive in any form.</p>
-</div>
-<div id="pu1" class="pu"><h1>Javascript Operators: 161 Bytes</h1>
+<div id="pu0" class="pu"><h1>Javascript Operators: 161 Bytes</h1>
 <p><em>-1: removed some unnecessary tokens</em></p>
 <p>I wanted to make one of these with just JS operators (and one character)<br>
 What I count as an operator: +-*/^&amp;~|=&lt;&gt;()[]{}?., (+ combination)<br>
@@ -418,7 +407,7 @@ _5=_3[_2+++_2] // &quot;)&quot;
 1: <code>-~[]</code><br>
 2+: <code>-~[]-~[]-~[]...-~[]</code><br>
 4: <code>-~[]&lt;&lt;-~[]-~[]</code><br>
-10: <code>+(([]+[])+-~[]+(+[]))</code><br>
+10: <code>[]+-~[]+-[]</code><br>
 etc.</p>
 <h3>Strings/Characters:</h3>
 <p>Strings are normally made by converting a function/object to a string, then slicing.<br>
@@ -427,6 +416,17 @@ char of str: str[charIdx]<br>
 &quot;_&quot;: slice <code>(_=&gt;(_=_))+[]</code><br>
 etc.</p>
 <p>This can most definitely be improved, and I welcome all of you to try it! Good luck!</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 38 bytes</h1>
+<pre class="lang-javascript prettyprint-override"><code>console.log(s='console.log(s=%o,s)',s)
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=m70kLz8ldcGCpaUlaboWN9WS8_OK83NS9XLy0zWKbdVRuar5OsWa6kAMUQ3VBNMMAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>This seems to be the shortest JavaScript quine that doesn't abuse function stringification. Unfortunately seems to be platform-specific: it works as-is in both Chrome and Node.js, but in Safari the single quotes must be replaced with double quotes.</p>
+<p>This uses the <a href="https://developer.mozilla.org/en-US/docs/Web/API/console#o" rel="nofollow noreferrer"><code>%o</code> formatting directive</a> of <code>console.log</code> to insert a JSON-stringified object, which in this case wraps the string in single quotes.</p>
+<p>In a strict-mode setting like Deno, you need to declare <code>var s;</code> at the start:</p>
+<pre class="lang-javascript prettyprint-override"><code>var s;console.log(s=&quot;var s;console.log(s=%o,s)&quot;,s)
+</code></pre>
+<p>Bun doesn't seem to support the <code>%o</code> directive in any form.</p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://github.com/iatorm/jellyfish" rel="nofollow noreferrer">Jellyfish</a>, <sup><s>67</s> <s>53</s></sup> 32 bytes</h1>
 <pre><code>P-vP,"Hi&lt;H(V3|V2b(
