--- a/q/89621.html
+++ b/q/89621.html
@@ -26,9 +26,9 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>069</td><td>Lua</td><td>231112T174534Z</td><td><a href="https://codegolf.stackexchange.com/questions/89621/random-golf-of-the-day-7-a-distinctly-random-character/266677#266677">bluswimm</a></td></tr>
-<tr d-ix="1"><td>040</td><td>Befunge</td><td>160813T013730Z</td><td><a href="https://codegolf.stackexchange.com/questions/89621/random-golf-of-the-day-7-a-distinctly-random-character/89699#89699">daniero</a></td></tr>
-<tr d-ix="2"><td>004</td><td>05AB1E</td><td>210216T231001Z</td><td><a href="https://codegolf.stackexchange.com/questions/89621/random-golf-of-the-day-7-a-distinctly-random-character/219199#219199">Makonede</a></td></tr>
+<tr d-ix="0"><td>004</td><td>05AB1E</td><td>210216T231001Z</td><td><a href="https://codegolf.stackexchange.com/questions/89621/random-golf-of-the-day-7-a-distinctly-random-character/219199#219199">Makonede</a></td></tr>
+<tr d-ix="1"><td>069</td><td>Lua</td><td>231112T174534Z</td><td><a href="https://codegolf.stackexchange.com/questions/89621/random-golf-of-the-day-7-a-distinctly-random-character/266677#266677">bluswimm</a></td></tr>
+<tr d-ix="2"><td>040</td><td>Befunge</td><td>160813T013730Z</td><td><a href="https://codegolf.stackexchange.com/questions/89621/random-golf-of-the-day-7-a-distinctly-random-character/89699#89699">daniero</a></td></tr>
 <tr d-ix="3"><td>004</td><td>Thunno 2</td><td>230618T091210Z</td><td><a href="https://codegolf.stackexchange.com/questions/89621/random-golf-of-the-day-7-a-distinctly-random-character/261987#261987">The Thon</a></td></tr>
 <tr d-ix="4"><td>026</td><td>Zsh</td><td>210217T085705Z</td><td><a href="https://codegolf.stackexchange.com/questions/89621/random-golf-of-the-day-7-a-distinctly-random-character/219212#219212">pxeger</a></td></tr>
 <tr d-ix="5"><td>005</td><td>Vyxal</td><td>210217T112558Z</td><td><a href="https://codegolf.stackexchange.com/questions/89621/random-golf-of-the-day-7-a-distinctly-random-character/219231#219231">Razetime</a></td></tr>
@@ -89,69 +89,10 @@
 <tr d-ix="60"><td>018</td><td>J</td><td>160812T125042Z</td><td><a href="https://codegolf.stackexchange.com/questions/89621/random-golf-of-the-day-7-a-distinctly-random-character/89632#89632">Leaky Nu</a></td></tr>
 <tr d-ix="61"><td>072</td><td>Python 2</td><td>160812T124331Z</td><td><a href="https://codegolf.stackexchange.com/questions/89621/random-golf-of-the-day-7-a-distinctly-random-character/89627#89627">atlasolo</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.lua.org/" rel="nofollow noreferrer">Lua</a>, 69 bytes</h1>
-
-<pre class="lang-lua prettyprint-override"><code>math.randomseed(os.time())print(('').char(math.random(727)^.5//1+64))
-</code></pre>
-<p><a href="https://tio.run/##yylN/P8/N7EkQ68oMS8lP7c4NTVFI79YryQzN1VDU7OgKDOvRENDXV1TLzkjsUgDSaWGuZG5Zpyeqb6@obaZiabm//8A" rel="nofollow noreferrer" title="Lua – Try It Online">Try it online!</a></p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/catseye/Befunge-93" rel="nofollow noreferrer">Befunge</a>, 40 bytes</h1>
-<p>Revisiting this 7 years later, I realized I I could just add the whole alphabet in one string and pop off a random amount of letters before printing. Suddenly it beats Python!</p>
-<pre><code>&quot;ZYXWVUTSRQPONMLKJIHGFEDCBA&quot;&gt; #$?:#@ #,_
-</code></pre>
-<p>Probabilities are the same as before; Starting from A, there is a <em>1/4</em> chance of printing the top of the stack, <em>2/4</em> to try again, and <em>1/4</em> to pop off one letter and repeat. If it somehow manages to move past Z it just starts over again with A. Trying a few times, the highest I got was an E.</p>
-<p><a href="https://tio.run/##S0pNK81LT/3/XykqMiI8LDQkOCgwwN/P18fby9PD3c3VxdnJUclOQVnF3krZQUFZJ/7/fwA" rel="nofollow noreferrer" title="Befunge-93 – Try It Online">Try it online!</a></p>
-<h1>Befunge, <s>168</s> 164 bytes</h1>
-<p>More compact than the first one, with a little different probabilities: The first <code>?</code> have a <em>1/4</em> chance of printing an A on &quot;first try&quot;, <em>2/4</em> chance to come back to the same <code>?</code>, and <em>1/4</em> to move to the next. The rest of the <code>?</code>s each have <em>1/4</em> chance of printing the letter underneath them, <em>1/4</em> to try again, <em>1/4</em> moving to the next letter, <em>1/4</em> moving to the previous. Again, the probability of printing an A is <em>a lot</em> higher than printing a Z.</p>
-<pre><code>??????????????????????????&gt;
-&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;
-ABCDEFGHIJKLMNOPQRSTUVWXYZ
-&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;
-&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;,@
-##########################
-</code></pre>
-<h1>Befunge, 186 bytes</h1>
-<p>Obviously not gonna win with this, but I think it's an interesting answer nonetheless :)</p>
-<p><code>v</code> and <code>&gt;</code> steers the cursor respectively downwards and to the right.
-The <code>?</code> operator sends the cursor off in one of four directions randomly. The first <code>?</code> is &quot;blocked&quot; by <code>v</code> and <code>&gt;</code> in two directions, so it only has two way to go: Either to print the A, or down to the next <code>?</code>. So from the first <code>?</code> alone there is a 50% chance of printing an A.</p>
-<p>The next <code>?</code> has a <em>1/3</em> chance of printing a B, <em>1/3</em> of going back up, and <em>1/3</em> of going further down. Etc etc.</p>
-<p>It should be quite obvious that the higher letters have a much larger chance of being printed than the lower ones, but I'm not exactly sure what each letter's chances are.</p>
-<p><strong>Some help with the exact math would be appreciated :)</strong></p>
-<p>At least there's a <em>1/2 * 1/3^25</em> chance that the cursor moves all the way down to the Z on the first try, but I'm uncertain how the chances of the cursor moving up and down affects each letter.</p>
-<p><code>,@</code> prints and quits.</p>
-<pre><code> v
-&gt;?&quot;A&quot;v
-&gt;?&quot;B&quot;v
-&gt;?&quot;C&quot;v
-&gt;?&quot;D&quot;v
-&gt;?&quot;E&quot;v
-&gt;?&quot;F&quot;v
-&gt;?&quot;G&quot;v
-&gt;?&quot;H&quot;v
-&gt;?&quot;I&quot;v
-&gt;?&quot;J&quot;v
-&gt;?&quot;K&quot;v
-&gt;?&quot;L&quot;v
-&gt;?&quot;M&quot;v
-&gt;?&quot;N&quot;v
-&gt;?&quot;O&quot;v
-&gt;?&quot;P&quot;v
-&gt;?&quot;Q&quot;v
-&gt;?&quot;R&quot;v
-&gt;?&quot;S&quot;v
-&gt;?&quot;T&quot;v
-&gt;?&quot;U&quot;v
-&gt;?&quot;V&quot;v
-&gt;?&quot;W&quot;v
-&gt;?&quot;X&quot;v
-&gt;?&quot;Y&quot;v
-&gt;?&quot;Z&quot;&gt;,@
-</code></pre>
-</div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E" rel="nofollow noreferrer">05AB1E</a>, 4 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E" rel="nofollow noreferrer">05AB1E</a>, 4 bytes</h1>
 <pre><code>AƶJΩ
 </code></pre>
-<p><a href="https://tio.run/##yy9OTMpM/f/f8dg2r3Mr//8HAA" rel="nofollow noreferrer" title="05AB1E – Try It Online">Try it online!</a> Beats all other answers.</p>
+<p><a href="https://tio.run/##yy9OTMpM/f/f8dg2r3Mr//8HAA" rel="nofollow noreferrer" title="05AB1E – Try It Online">Try it online!</a></p>
 <pre><code>AƶJΩ  # full program
    Ω  # random character from...
   J   # joined...
@@ -225,6 +166,65 @@ w: 1.14%
 x: 0.855%
 y: 0.57%
 z: 0.285%
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.lua.org/" rel="nofollow noreferrer">Lua</a>, 69 bytes</h1>
+
+<pre class="lang-lua prettyprint-override"><code>math.randomseed(os.time())print(('').char(math.random(727)^.5//1+64))
+</code></pre>
+<p><a href="https://tio.run/##yylN/P8/N7EkQ68oMS8lP7c4NTVFI79YryQzN1VDU7OgKDOvRENDXV1TLzkjsUgDSaWGuZG5Zpyeqb6@obaZiabm//8A" rel="nofollow noreferrer" title="Lua – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu2" class="pu"><h1><a href="https://github.com/catseye/Befunge-93" rel="nofollow noreferrer">Befunge</a>, 40 bytes</h1>
+<p>Revisiting this 7 years later, I realized I I could just add the whole alphabet in one string and pop off a random amount of letters before printing. Suddenly it beats Python!</p>
+<pre><code>&quot;ZYXWVUTSRQPONMLKJIHGFEDCBA&quot;&gt; #$?:#@ #,_
+</code></pre>
+<p>Probabilities are the same as before; Starting from A, there is a <em>1/4</em> chance of printing the top of the stack, <em>2/4</em> to try again, and <em>1/4</em> to pop off one letter and repeat. If it somehow manages to move past Z it just starts over again with A. Trying a few times, the highest I got was an E.</p>
+<p><a href="https://tio.run/##S0pNK81LT/3/XykqMiI8LDQkOCgwwN/P18fby9PD3c3VxdnJUclOQVnF3krZQUFZJ/7/fwA" rel="nofollow noreferrer" title="Befunge-93 – Try It Online">Try it online!</a></p>
+<h1>Befunge, <s>168</s> 164 bytes</h1>
+<p>More compact than the first one, with a little different probabilities: The first <code>?</code> have a <em>1/4</em> chance of printing an A on &quot;first try&quot;, <em>2/4</em> chance to come back to the same <code>?</code>, and <em>1/4</em> to move to the next. The rest of the <code>?</code>s each have <em>1/4</em> chance of printing the letter underneath them, <em>1/4</em> to try again, <em>1/4</em> moving to the next letter, <em>1/4</em> moving to the previous. Again, the probability of printing an A is <em>a lot</em> higher than printing a Z.</p>
+<pre><code>??????????????????????????&gt;
+&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;
+ABCDEFGHIJKLMNOPQRSTUVWXYZ
+&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;
+&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;,@
+##########################
+</code></pre>
+<h1>Befunge, 186 bytes</h1>
+<p>Obviously not gonna win with this, but I think it's an interesting answer nonetheless :)</p>
+<p><code>v</code> and <code>&gt;</code> steers the cursor respectively downwards and to the right.
+The <code>?</code> operator sends the cursor off in one of four directions randomly. The first <code>?</code> is &quot;blocked&quot; by <code>v</code> and <code>&gt;</code> in two directions, so it only has two way to go: Either to print the A, or down to the next <code>?</code>. So from the first <code>?</code> alone there is a 50% chance of printing an A.</p>
+<p>The next <code>?</code> has a <em>1/3</em> chance of printing a B, <em>1/3</em> of going back up, and <em>1/3</em> of going further down. Etc etc.</p>
+<p>It should be quite obvious that the higher letters have a much larger chance of being printed than the lower ones, but I'm not exactly sure what each letter's chances are.</p>
+<p><strong>Some help with the exact math would be appreciated :)</strong></p>
+<p>At least there's a <em>1/2 * 1/3^25</em> chance that the cursor moves all the way down to the Z on the first try, but I'm uncertain how the chances of the cursor moving up and down affects each letter.</p>
+<p><code>,@</code> prints and quits.</p>
+<pre><code> v
+&gt;?&quot;A&quot;v
+&gt;?&quot;B&quot;v
+&gt;?&quot;C&quot;v
+&gt;?&quot;D&quot;v
+&gt;?&quot;E&quot;v
+&gt;?&quot;F&quot;v
+&gt;?&quot;G&quot;v
+&gt;?&quot;H&quot;v
+&gt;?&quot;I&quot;v
+&gt;?&quot;J&quot;v
+&gt;?&quot;K&quot;v
+&gt;?&quot;L&quot;v
+&gt;?&quot;M&quot;v
+&gt;?&quot;N&quot;v
+&gt;?&quot;O&quot;v
+&gt;?&quot;P&quot;v
+&gt;?&quot;Q&quot;v
+&gt;?&quot;R&quot;v
+&gt;?&quot;S&quot;v
+&gt;?&quot;T&quot;v
+&gt;?&quot;U&quot;v
+&gt;?&quot;V&quot;v
+&gt;?&quot;W&quot;v
+&gt;?&quot;X&quot;v
+&gt;?&quot;Y&quot;v
+&gt;?&quot;Z&quot;&gt;,@
 </code></pre>
 </div>
 <div id="pu3" class="pu"><h1><a href="https://github.com/Thunno/Thunno2" rel="nofollow noreferrer">Thunno 2</a>, 4 <a href="https://github.com/Thunno/Thunno2/blob/main/docs/codepage.md" rel="nofollow noreferrer">bytes</a></h1>
@@ -434,7 +434,7 @@ c - 3/351
 
 <p>Below is the count for each generated numbers after 20000 iterations (using my first version of my answer).</p>
 
-<p><a href="https://i.stack.imgur.com/0G09R.png" rel="nofollow noreferrer"><img src="https://i.stack.imgur.com/0G09R.png" alt="distribution after 20000 iterations"></a></p>
+<p><a href="https://i.sstatic.net/0G09R.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/0G09R.png" alt="distribution after 20000 iterations"></a></p>
 </div>
 <div id="pu15" class="pu"><h1>IA-32 machine code, 12 bytes</h1>
 
@@ -662,7 +662,7 @@ print(s)
 
 <p>Output (w/ free page number :) ):</p>
 
-<p><a href="https://i.stack.imgur.com/rXojY.png" rel="nofollow noreferrer"><img src="https://i.stack.imgur.com/rXojY.png" alt="enter image description here"></a></p>
+<p><a href="https://i.sstatic.net/rXojY.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/rXojY.png" alt="enter image description here"></a></p>
 </div>
 <div id="pu22" class="pu"><h1><a href="http://perl6.org" rel="nofollow">Perl 6</a>, 30 bytes</h1>
 
@@ -1227,14 +1227,14 @@ Z:  1/2^26 + 1/2^52 + 1/2^78 + ... = half of chance for Y
 <p>As an illustration that the probabilities are distinct, here's a discrete histogram resulting from 1000000 random realizations. The graph is produced by running this in Matlab:</p>
 <pre><code>bar(0:25, histc(floor(26*rand(1,1e6).^2), 0:25))
 </code></pre>
-<p><a href="https://i.stack.imgur.com/Piomw.png" rel="noreferrer"><img src="https://i.stack.imgur.com/Piomw.png" alt="enter image description here" /></a></p>
+<p><a href="https://i.sstatic.net/Piomw.png" rel="noreferrer"><img src="https://i.sstatic.net/Piomw.png" alt="enter image description here" /></a></p>
 </div>
 <div id="pu44" class="pu"><h1>Julia, 33 bytes</h1>
 <pre><code>f()=['A':'Z'][ceil(26*√rand())]
 </code></pre>
 <p>Applies the square root to RNG.</p>
 <p>Graph showing distribution:
-<a href="https://i.stack.imgur.com/ldhOa.png" rel="nofollow noreferrer"><img src="https://i.stack.imgur.com/ldhOa.png" alt="enter image description here" /></a>
+<a href="https://i.sstatic.net/ldhOa.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/ldhOa.png" alt="enter image description here" /></a>
 Generated with:</p>
 <pre><code>using Gadfly
 plot(x=ceil(26*√rand(10000)),Geom.histogram)
