--- a/q/275630.html
+++ b/q/275630.html
@@ -26,10 +26,19 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>040</td><td>x86 .COM opcode</td><td>240919T071100Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275631#275631">l4m2</a></td></tr>
-<tr d-ix="1"><td>125</td><td>Rust</td><td>240919T080224Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275632#275632">bzr</a></td></tr>
+<tr d-ix="0"><td>150</td><td>HTML</td><td>240919T082944Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275634#275634">Kevin Cr</a></td></tr>
+<tr d-ix="1"><td>040</td><td>x86 .COM opcode</td><td>240919T071100Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275631#275631">l4m2</a></td></tr>
+<tr d-ix="2"><td>125</td><td>Rust</td><td>240919T080224Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275632#275632">bzr</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>x86 .COM opcode, 40 bytes</h1>
+<div id="pu0" class="pu"><h1>HTML, 150 bytes</h1>
+<p><div class="snippet" data-lang="js" data-hide="false" data-console="true" data-babel="false">
+<div class="snippet-code">
+<pre class="snippet-code-html lang-html prettyprint-override"><code>&lt;input type="password"oninput="this.value=this.value.replace(/[^\d]/g,'')"onkeydown="(c=event.which)!=8&amp;c&lt;48|c&gt;57&amp;&amp;event.preventDefault()"maxlength=4&gt;</code></pre>
+</div>
+</div>
+</p>
+</div>
+<div id="pu1" class="pu"><h1>x86 .COM opcode, 40 bytes</h1>
 <p>Not placing on left-to corner saves</p>
 <pre><code>    org 100h
     mov bx, 0AE00h
@@ -58,7 +67,7 @@ bksp:
 00000020: 0272 f3c6 0720 ebdd                      .r... ..
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.rust-lang.org" rel="nofollow noreferrer">Rust</a>, 125 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.rust-lang.org" rel="nofollow noreferrer">Rust</a>, 125 bytes</h1>
 <pre class="lang-rust prettyprint-override"><code>fn f(x:&amp;str){let x=x.chars().filter(|y|y.is_digit(10)).collect::&lt;Vec&lt;_&gt;&gt;();for i in 0..std::cmp::min(x.len(),4){dbg!(x[i]);}}
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=LY5BCoJAFECvMm1iPtRg0CJG8xhtIsTGGfswasx8YUQ9SRuDWnWibpNgqwdv897j5VpP08fUrMqx5sD6d0tme_iOszI8yLUnB73VxMIxCHXLnecgDFrSjg_d0An0WYElEt9FAEI11mpFUiYnrZIsTTnEpnEMGdYsEsJTIaWq7lJWcy8Iq-fqZg99cS1XPJzxAvE4LhPPP6dp4Q8" rel="nofollow noreferrer">Attempt This Online!</a></p>
