--- a/q/272303.html
+++ b/q/272303.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>068</td><td>Arturo</td><td>240919T091022Z</td><td><a href="https://codegolf.stackexchange.com/questions/272303/emulate-jellys-tie-scan/275637#275637">chunes</a></td></tr>
+<tr d-ix="0"><td>063</td><td>Arturo</td><td>240919T091022Z</td><td><a href="https://codegolf.stackexchange.com/questions/272303/emulate-jellys-tie-scan/275637#275637">chunes</a></td></tr>
 <tr d-ix="1"><td>073</td><td>Clojure</td><td>240918T223743Z</td><td><a href="https://codegolf.stackexchange.com/questions/272303/emulate-jellys-tie-scan/275624#275624">Martin P</a></td></tr>
 <tr d-ix="2"><td>048</td><td>C clang</td><td>240820T142313Z</td><td><a href="https://codegolf.stackexchange.com/questions/272303/emulate-jellys-tie-scan/275066#275066">jdt</a></td></tr>
 <tr d-ix="3"><td>053</td><td>R</td><td>240820T164247Z</td><td><a href="https://codegolf.stackexchange.com/questions/272303/emulate-jellys-tie-scan/275068#275068">Dominic </a></td></tr>
@@ -45,10 +45,10 @@
 <tr d-ix="16"><td>055</td><td>Python 3.8</td><td>240403T210710Z</td><td><a href="https://codegolf.stackexchange.com/questions/272303/emulate-jellys-tie-scan/272307#272307">Jonathan</a></td></tr>
 <tr d-ix="17"><td>046</td><td>JavaScript Node.js</td><td>240403T203633Z</td><td><a href="https://codegolf.stackexchange.com/questions/272303/emulate-jellys-tie-scan/272306#272306">l4m2</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 68 bytes</h1>
-<pre><code>$[a,g][i:0[l[r]]: a@[a\0]++map r'x[l:&lt;=call g\[i%size g]@[l,x]'i+1]]
+<div id="pu0" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, <s>68</s> 63 bytes</h1>
+<pre class="lang-arturo prettyprint-override"><code>$[a,b][i:0map b'c[h:&lt;=?i=0-&gt;c-&gt;call a\[%-i,1size a]@[h,c]'i+1]]
 </code></pre>
-<p>Requires modern Arturo. This works online for +3 bytes: <a href="http://arturo-lang.io/playground?9DnuZf" rel="nofollow noreferrer">Try it!</a></p>
+<p><a href="http://arturo-lang.io/playground?8E3u4U" rel="nofollow noreferrer">Try it!</a></p>
 <p>If you told me this problem was specifically designed to stymie Arturo, I would believe you.</p>
 </div>
 <div id="pu1" class="pu"><h2>Clojure, 73 bytes</h2>
