--- a/q/275590.html
+++ b/q/275590.html
@@ -176,6 +176,7 @@
 <p><span class="math-container">$$1/\sqrt[12]{2}\approx 0,9438743$$</span></p>
 <p>To apply this ratio to a period <span class="math-container">\$P_n\$</span>, we use the following approximation:</p>
 <p><span class="math-container">$$P_{n+1}=\left\lfloor\frac{P_n \times 483 + 350}{512}\right\rfloor$$</span></p>
+<p>We start with <span class="math-container">\$P_0=1432\$</span>, which is the period for F-2 on a PAL Intellivision, computed with the formula described in the previous section.</p>
 <p>The CP-1610 doesn't have any multiplication instruction, so we have to compute it with additions and shifts. Besides, we need 32-bit values to have enough precision. So two pairs of 16-bit registers are used (R0/R1 and R2/R3).</p>
 <p>The integer division by 512 is of course much simpler since it boils down to a right-shift by 9.</p>
 </div>
