--- a/q/275590.html
+++ b/q/275590.html
@@ -37,7 +37,9 @@
 <p><em><sup>1. CP-1610 instructions are encoded with 10-bit values (0x000 to 0x3FF), known as DECLEs. Although the Intellivision is also able to work on 16-bit data, programs were really stored in 10-bit ROM back then.</sup></em></p>
 <p>A fantasy console?!? Let's do it on a real one!</p>
 <p>This code is meant to be run on a PAL Intellivision (50Hz). It would also work on an NTSC system (60Hz), but at a different pitch and speed.</p>
-<p><em>Audio output and more detailed explanation to be added later.</em></p>
+<h2>Demo</h2>
+<p><a href="https://youtu.be/2DOweHnZf0g" rel="nofollow noreferrer">Here is what we get</a> on the real hardware (YouTube video), using the <a href="http://ltoflash.leftturnonly.info/" rel="nofollow noreferrer">LTO Flash!</a>.</p>
+<h2>Source code</h2>
 <pre><code>                            ROMW  10          ; use 10-bit ROM width
 0x4800                      ORG   $4800       ; map our code at $4800
                    
