--- a/q/275630.html
+++ b/q/275630.html
@@ -26,21 +26,46 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>095</td><td>HTML</td><td>240919T082944Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275634#275634">Kevin Cr</a></td></tr>
-<tr d-ix="1"><td>040</td><td>x86 .COM opcode</td><td>240919T071100Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275631#275631">l4m2</a></td></tr>
-<tr d-ix="2"><td>125</td><td>Rust</td><td>240919T080224Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275632#275632">bzr</a></td></tr>
+<tr d-ix="0"><td>094</td><td>Zsh</td><td>240919T132850Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275639#275639">GammaFun</a></td></tr>
+<tr d-ix="1"><td>092</td><td>HTML</td><td>240919T082944Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275634#275634">Kevin Cr</a></td></tr>
+<tr d-ix="2"><td>040</td><td>x86 .COM opcode</td><td>240919T071100Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275631#275631">l4m2</a></td></tr>
+<tr d-ix="3"><td>125</td><td>Rust</td><td>240919T080224Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275632#275632">bzr</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>HTML, <s>150</s> <s>148</s> <s>134</s> 95 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a>, 94 bytes</h1>
+
+<pre class="lang-sh prettyprint-override"><code>while (($#a&lt;4)); do
+read -sk1 k
+case $k {$'\C-?')a[1]=;;[0-9])a+=*
+}
+printf '\r\e[K%s' $a
+done
+</code></pre>
+<hr />
+<pre class="lang-sh prettyprint-override"><code># $#foo: length of $foo
+while (($#asterisks &lt; 4)); do
+    # -s: silent/noecho, -k 1: one keypress
+    read -s -k 1 key
+    case $key {
+        # backspace: delete first character from asterisks string
+        $'\C-?') asterisks[1]= ;;
+        [0-9])   asterisks+=*
+    }
+    # \r: start of line, \e[K: clear to end of line
+    printf '\r\e[K%s' $asterisks
+done
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1>HTML, <s>150</s> <s>148</s> <s>134</s> 92 bytes</h1>
 <p><div class="snippet" data-lang="js" data-hide="false" data-console="true" data-babel="false">
 <div class="snippet-code">
-<pre class="snippet-code-html lang-html prettyprint-override"><code>&lt;input type=password maxlength=4 onkeydown=(c=event.which)!=8&amp;c&lt;48|57&lt;c&amp;&amp;event.preventDefault()</code></pre>
+<pre class="snippet-code-html lang-html prettyprint-override"><code>&lt;input type=password onkeydown=(c=event.which)!=8&amp;c&lt;48|57&lt;c|value[3]&amp;&amp;event.preventDefault()</code></pre>
 </div>
 </div>
 </p>
-<p>-53 bytes thanks to <em>@Shaggy</em>.</p>
+<p>-56 bytes thanks to <em>@Shaggy</em>.</p>
 <p>I'm still trying to find a browser that uses asterisk for password-fields instead of bullets (the four browsers I had installed - Chrome; Firefox; Edge; Opera - unfortunately all use bullets).</p>
 </div>
-<div id="pu1" class="pu"><h1>x86 .COM opcode, 40 bytes</h1>
+<div id="pu2" class="pu"><h1>x86 .COM opcode, 40 bytes</h1>
 <p>Not placing on left-to corner saves</p>
 <pre><code>    org 100h
     mov bx, 0AE00h
@@ -69,7 +94,7 @@ bksp:
 00000020: 0272 f3c6 0720 ebdd                      .r... ..
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.rust-lang.org" rel="nofollow noreferrer">Rust</a>, 125 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://www.rust-lang.org" rel="nofollow noreferrer">Rust</a>, 125 bytes</h1>
 <pre class="lang-rust prettyprint-override"><code>fn f(x:&amp;str){let x=x.chars().filter(|y|y.is_digit(10)).collect::&lt;Vec&lt;_&gt;&gt;();for i in 0..std::cmp::min(x.len(),4){dbg!(x[i]);}}
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=LY5BCoJAFECvMm1iPtRg0CJG8xhtIsTGGfswasx8YUQ9SRuDWnWibpNgqwdv897j5VpP08fUrMqx5sD6d0tme_iOszI8yLUnB73VxMIxCHXLnecgDFrSjg_d0An0WYElEt9FAEI11mpFUiYnrZIsTTnEpnEMGdYsEsJTIaWq7lJWcy8Iq-fqZg99cS1XPJzxAvE4LhPPP6dp4Q8" rel="nofollow noreferrer">Attempt This Online!</a></p>
