--- a/q/275630.html
+++ b/q/275630.html
@@ -26,15 +26,15 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>089</td><td>C MSVC</td><td>240919T150244Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275643#275643">jdt</a></td></tr>
+<tr d-ix="0"><td>086</td><td>C MSVC</td><td>240919T150244Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275643#275643">jdt</a></td></tr>
 <tr d-ix="1"><td>094</td><td>Zsh</td><td>240919T132850Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275639#275639">GammaFun</a></td></tr>
 <tr d-ix="2"><td>092</td><td>HTML</td><td>240919T082944Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275634#275634">Kevin Cr</a></td></tr>
 <tr d-ix="3"><td>040</td><td>x86 .COM opcode</td><td>240919T071100Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275631#275631">l4m2</a></td></tr>
 <tr d-ix="4"><td>125</td><td>Rust</td><td>240919T080224Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275632#275632">bzr</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://en.wikipedia.org/wiki/Microsoft_Visual_C%2B%2B" rel="nofollow noreferrer">C (MSVC)</a>, 89 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://en.wikipedia.org/wiki/Microsoft_Visual_C%2B%2B" rel="nofollow noreferrer">C (MSVC)</a>, 86 bytes</h1>
 
-<pre class="lang-c prettyprint-override"><code>c,n;main(i){for(;n&lt;4;write(1,&quot;\r    \r****&quot;,(c-8?c&gt;47&amp;c&lt;58?++n:n:n?--n:n)+6))c=_getch();}
+<pre class="lang-c prettyprint-override"><code>n;main(c){for(;n&lt;4;write(1,&quot;\r    \r****&quot;,(c-8?c&gt;47&amp;c&lt;58?++n:n:n?--n:n)+6))c=getch();}
 </code></pre>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a>, 94 bytes</h1>
